# amazonia

./: CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile
amazonia/: CMakeLists.txt
amazonia/include/amazonia/core/: image2d.cuh  image2d_data.cuh  image2d_view.cuh  rgb.cuh  tags.cuh  transfer.cuh  transfert.cuh
amazonia/include/amazonia/dt/: generalised_geodesic.cuh
amazonia/include/amazonia/io/: imread.cuh  imwrite.cuh
amazonia/include/amazonia/utils/: inferno.cuh
amazonia/src/dt/: generalised_geodesic.cu
amazonia/src/io/: imread.cu  imwrite.cu
doc/: CMakeLists.txt  Doxyfile.in
tests/: CMakeLists.txt  generalised_geodesic.cu  helpers.cuh  image2d.cu  image2d_view.cu  io.cu
